[gd_scene load_steps=2 format=3 uid="uid://game_hud_scene"]

[ext_resource type="Script" path="res://GameHUD.gd" id="1_hud"]

[node name="GameHUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_hud")

[node name="TimerLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "00:00"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 50.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="XPBar" type="ProgressBar" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -40.0
offset_right = 400.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
max_value = 100.0
show_percentage = false

[node name="LevelLabel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Level 1"
horizontal_alignment = 1
